# libbonobo

./: .cvsignore  AUTHORS  ChangeLog  DEPENDS  HACKING  MAINTAINERS  Makefile.am  Makefile.in  NEWS  OChangeLog-2000-12-11  OChangeLog-2001-04-13  README  TODO  TRANSLATABLE_FILES  USERS  acconfig.h  aclocal.m4  autogen.sh  bonobo-activation-config.xml  changes.txt  configure  configure.in  libbonobo-zip.in  libbonobo.doap  libbonobo.h  message-of-doom  orbit2-convert.pl
activation-server/: .cvsignore  .gitignore  Bonobo_CosNaming_NamingContext.server.in  Makefile.am  Makefile.in  activation-context-corba.c  activation-context-query-lexer.l  activation-context-query-parser.y  activation-context-query.c  activation-context-query.h  activation-context.h  activation-server-corba-extensions.c  activation-server-main.c  client.c  object-directory-activate.c  object-directory-config-file.c  object-directory-config-file.h  object-directory-corba.c  object-directory-load.c  object-directory.h  qsort_ex.c  qsort_ex.h  server.h  test-performance.c
bonobo/: .cvsignore  .gitignore  Makefile.am  Makefile.in  bonobo-activation-context.c  bonobo-activation-context.h  bonobo-app-client.c  bonobo-app-client.h  bonobo-application.c  bonobo-application.h  bonobo-arg.c  bonobo-arg.h  bonobo-async.c  bonobo-async.h  bonobo-component-io.c  bonobo-component-io.h  bonobo-config-database.c  bonobo-config-database.h  bonobo-context.c  bonobo-context.h  bonobo-debug.c  bonobo-defs.h  bonobo-event-source.c  bonobo-event-source.h  bonobo-exception.c  bonobo-exception.h  bonobo-foreign-object.c  bonobo-generic-factory.c  bonobo-generic-factory.h  bonobo-i18n.h  bonobo-item-container.c  bonobo-item-container.h  bonobo-item-handler.c  bonobo-item-handler.h  bonobo-listener.c  bonobo-listener.h  bonobo-main.c  bonobo-main.h  bonobo-marshal-main.c  bonobo-marshal.list  (+65 more)
bonobo-activation/: .cvsignore  .gitignore  Makefile.am  Makefile.in  bonobo-activation-2.0-uninstalled.pc.in  bonobo-activation-2.0.pc.in  bonobo-activation-activate-private.h  bonobo-activation-activate.c  bonobo-activation-activate.h  bonobo-activation-async-callback.c  bonobo-activation-async-callback.h  bonobo-activation-async.c  bonobo-activation-async.h  bonobo-activation-base-service.c  bonobo-activation-base-service.h  bonobo-activation-client.c  bonobo-activation-fork-server.c  bonobo-activation-get-language-list.c  bonobo-activation-i18n.h  bonobo-activation-id.c  bonobo-activation-id.h  bonobo-activation-init.c  bonobo-activation-init.h  bonobo-activation-mime.c  bonobo-activation-private.h  bonobo-activation-register.c  bonobo-activation-register.h  bonobo-activation-server-info.c  bonobo-activation-server-info.h  bonobo-activation-shlib.c  bonobo-activation-shlib.h  bonobo-activation-version.h.in  bonobo-activation.h
doc/: FAQ  Makefile.in  NAMESPACE  b-a-s-threading.txt  debugging.txt  properties.txt  refcounting.txt  simple-moniker-arguments.txt
doc/activation/: Makefile.am  Makefile.in  activation-discussion.txt  bonobo-activation-config.txt  bonobo-activation.dia  bonobo-activation.dtd  debugging.txt  (+5 more)
doc/activation-api/: .cvsignore  Makefile.am  Makefile.in  architecture.sgml  bonobo-activation-decl.txt  bonobo-activation-sections.txt  bonobo-activation.sgml  configuring.sgml  fdl.sgml  migrating.sgml  query-langage.sgml  server-xml-reference.sgml  tutorial.sgml
doc/activation-api/tmpl/: debugging.sgml  initialization.sgml  query.sgml  registration.sgml  utilities.sgml
idl/: .cvsignore  .gitignore  Bonobo.idl  Bonobo_ActivationContext.idl  Bonobo_Activation_types.idl  Bonobo_Advise.idl  Bonobo_Canvas.idl  Bonobo_ClientSite.idl  Bonobo_Clipboard.idl  Bonobo_ConfigDatabase.idl  Bonobo_Context.idl  Bonobo_Control.idl  Bonobo_Embeddable.idl  Bonobo_GenericFactory.idl  Bonobo_ItemContainer.idl  Bonobo_Listener.idl  Bonobo_Moniker.idl  Bonobo_ObjectDirectory.idl  Bonobo_Persist.idl  Bonobo_Print.idl  Bonobo_Progressive.idl  Bonobo_Property.idl  Bonobo_Storage.idl  Bonobo_UI.idl  Bonobo_Unknown.idl  Bonobo_Zoomable.idl  Makefile.am  Makefile.in  advise.idl  base.idl  bobject.idl  bonobo-advise.idl  bonobo-app.idl  bonobo-canvas.idl  bonobo-client-site.idl  bonobo-container.idl  bonobo-context.idl  bonobo-control.idl  bonobo-desktop.idl  bonobo-embeddable.idl  (+35 more)
monikers/: .cvsignore  .gitignore  Bonobo_Moniker_std.oaf.in.in  Bonobo_Moniker_std.server.in.in  Makefile.am  Makefile.in  bonobo-moniker-cache.c  bonobo-moniker-extender-stream.c  bonobo-moniker-item.c  bonobo-moniker-new.c  bonobo-moniker-oaf.c  bonobo-moniker-query.c  bonobo-moniker-query.h  bonobo-moniker-std.c  bonobo-moniker-std.h  bonobo-stream-cache.c  bonobo-stream-cache.h
po/: .cvsignore  ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  am.po  ar.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  (+48 more)
samples/: Makefile.in
tests/: .cvsignore  Makefile.am  Makefile.in  Test_Generic_Factory.server.in  generic-factory.c  test-any.c  test-event-source.c  test-generic-factory.c  test-generic-factory.sh  test-generic-factory.sh.in  test-main-loop.c  test-moniker.c  test-object.c  test-properties-client.c  test-properties-server.c  test-storage-mem.c  test-stream-mem  test-stream-mem.c  test-thread.c  test-uniqapp.c
tests/models/: Makefile.in  generic-factory.output  runtest-output-test-properties-client.output  runtest-output-test-properties-server.output
tests/test-activation/: .cvsignore  .gitignore  Makefile.am  Makefile.in  bonobo-activation-run-query.c  bonobo-activation-slay  bonobo-activation-test-async.c  bonobo-activation-test.c  broken.server  empty-client.c  empty-server.c  empty.server  plugin.server  test.sh
trunk/: ChangeLog  DEPENDS  MAINTAINERS  Makefile.am  NEWS  USERS  orbit2-convert.pl
utils/: .cvsignore  .gitignore  Makefile.am  Makefile.in  bonobo-activate.c  bonobo-activation-sysconf.c  bonobo-query.c  bonobo-slay  bonobo-slay.in
(+120 files in other folders)
