NULL=

idldir = $(datadir)/idl

idl_DATA =				\
	bonobo.idl			\
	Bonobo.idl			\
	bonobo-unknown.idl		\
	bonobo-advise.idl		\
	bonobo-app.idl			\
	bonobo-canvas.idl		\
	bonobo-control.idl		\
	bonobo-client-site.idl		\
	bonobo-embeddable.idl		\
	bonobo-item-container.idl	\
	bonobo-persist.idl		\
	bonobo-storage.idl		\
	bonobo-progressive.idl		\
	bonobo-listener.idl		\
	bonobo-property.idl		\
	bonobo-desktop.idl		\
	bonobo-print.idl		\
	bonobo-moniker.idl		\
	bonobo-sizeable.idl		\
	$(NULL)

EXTRA_DIST = $(idl_DATA)
